[package]
name = "avrodisiac"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
apache-avro = "0.17.0"
clap = { version = "4.4.18", features = ["derive"] }
tempfile = "3.10.1"

[patch.crates-io]
# apache-avro = { git = "https://github.com/apache/avro.git"}
apache-avro = { git = "https://github.com/Panaetius/avro.git", branch="add-rust-logical-type-compatibility"}
